--- a/views/ru/index.pug
+++ b/views/ru/index.pug
@@ -4,15 +4,15 @@ block content
 		.container.d-flex.align-items-center
 			.logo.mr-auto
 				h1.text-light
-					a(href='/en') Mazzo
+					a(href='index.html') Маззо
 			nav.nav-menu.d-none.d-lg-block
 				ul
 					li.active
-						a(href='en') Home
+						a(href='/ru') Главное
 					li
-						a(href='#about') About us
+						a(href='#about') О нас
 					li
-						a(href='/en/katalog') Category
+						a(href='/ru/katalog') Каталог
 
 					li
 						a(href='#pricing') Pricing
@@ -20,9 +20,9 @@ block content
 					li
 						a(href='#team') Team
 					li
-						a(href='#contact') Contacts
+						a(href='#contact') Контакты
 					li
-						a(href='/ru') ru
+						a(href='/en') en
 	section#hero.d-flex.flex-column.justify-content-end.align-items-center
 		#heroCarousel.container.carousel.carousel-fade(data-ride='carousel')
 			// Slide 1
