--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
-    transition-delay:0ms !important;
+    transition-delay: 0 !important;
   }
 }
 
@@ -334,7 +334,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 95%;
   background-position: center;
   background-repeat: no-repeat; 
-  background-image: url('/images/Home/27756.jpg');
+  background-image: url('/images/Home/27756.jpg'); 
   background-size: cover;
 }
 
