--- a/views/admin/layout.pug
+++ b/views/admin/layout.pug
@@ -54,7 +54,7 @@ html(lang='en')
                
           ul.nav.navbar-nav.navbar-right     
               li
-                a(href='/logout')
+                a(href='/users/logout')
                   span.glyphicon.glyphicon-log-in
                   |  Logout
     .container
