--- a/views/en/index.pug
+++ b/views/en/index.pug
@@ -15,11 +15,6 @@ block content
 						a(href='/en/katalog') Category
 
 					li
-						a(href='#pricing') Pricing
-
-					li
-						a(href='#team') Team
-					li
 						a(href='#contact') Contacts
 					li
 						a(href='/ru') ru
@@ -118,51 +113,51 @@ block content
 					.col-lg-4.col-md-6
 						.icon-box(data-aos='zoom-in-left')
 							.icon
-								i.las.la-basketball-ball(style='color: #ff689b;')
+								i.las.la-handshake(style='color: #ff689b;')
 							h4.title
-								a(href='') New collections
+								a(href='') Cooperation
 							p.description
-								| We try to develop in step with the times and therefore our team is working on new designs every day
+								| We invite you to become our official representative in your city and get all kinds of support from us to develop your own business. For detailed information please contact mazzo_uz@mail.ru
 					.col-lg-4.col-md-6.mt-5.mt-md-0
 						.icon-box(data-aos='zoom-in-left', data-aos-delay='100')
 							.icon
-								i.las.la-book(style='color: #e9bf06;')
+								i.las.la-award(style='color: #e9bf06;')
 							h4.title
-								a(href='') Fast feedback
+								a(href='') Top quality
 							p.description
-								| Our employees give their best so that no visitor to our site who has asked a question does not have to wait a very long
+								| Thanks to the impeccable material from which our bedding seto‘ are sewn, we give you a 15-20 years warranty for each set
 					.col-lg-4.col-md-6.mt-5.mt-lg-0
 						.icon-box(data-aos='zoom-in-left', data-aos-delay='200')
 							.icon
 								i.las.la-file-alt(style='color: #3fcdc7;')
 							h4.title
+								a(href='') New collections
+							p.description
+								| We try to develop in step with the times and therefore our team is working on new designs every day
+					.col-lg-4.col-md-6.mt-5
+						.icon-box(data-aos='zoom-in-left', data-aos-delay='300')
+							.icon
+								i.las.la-user-clock(style='color:#41cf2e;')
+							h4.title
+								a(href='') Fast feedback
+							p.description
+								| Our employees give their best so that no visitor to our site who has asked a question does not have to wait a very long
+					.col-lg-4.col-md-6.mt-5
+						.icon-box(data-aos='zoom-in-left', data-aos-delay='400')
+							.icon
+								i.las.la-layer-group(style='color: #d6ff22;')
+							h4.title
 								a(href='') Individual approach to each client
 							p.description
 								| You can order a new set of bedding, made exclusively for you, specifying the dimensions, design and material
 					.col-lg-4.col-md-6.mt-5
-						.icon-box(data-aos='zoom-in-left', data-aos-delay='300')
-							.icon
-								i.las.la-tachometer-alt(style='color:#41cf2e;')
-							h4.title
-								a(href='') Delivery anywhere in the world
-							p.description
-								|  You can order a set of bedding from anywhere in the world without leaving your home
-					.col-lg-4.col-md-6.mt-5
-						.icon-box(data-aos='zoom-in-left', data-aos-delay='400')
-							.icon
-								i.las.la-globe-americas(style='color: #d6ff22;')
-							h4.title
-								a(href='') What we do offer
-							p.description
-								| We invite you to become our official representative in your city and get all kinds of support from us to develop your own business. For detailed information please contact mazzo_uz@mail.ru
-					.col-lg-4.col-md-6.mt-5
 						.icon-box(data-aos='zoom-in-left', data-aos-delay='500')
 							.icon
-								i.las.la-clock(style='color: #4680ff;')
+								i.las.la-globe(style='color: #4680ff;')
 							h4.title
-								a(href='') Top quality
+								a(href='') Worldwide delivery
 							p.description
-								| Thanks to the impeccable material from which our bedding seto‘ are sewn, we give you a 15-20 years warranty for each set
+								| You can order a set of bedding from anywhere in the world without leaving your home
 					// End Services Section
 					// ======= Portfolio Section =======
 		section#portfolio.portfolio
@@ -180,19 +175,19 @@ block content
 						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-1.JPG', alt='')
 						.portfolio-info
-							h4 App 1
-							p App
+							h4 Satin 1
+							p Satin
 							a.venobox.preview-link(href='/images/portfolio/portfolio-1.jpg', data-gall='portfolioGallery', title='App 1')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
 					.col-lg-4.col-md-6.portfolio-item.filter-web
 						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-2.jpg', alt='')
+							img.img-fluid(src='/images/portfolio/portfolio-7.jpg', alt='')
 						.portfolio-info
-							h4 Web 3
-							p Web
-							a.venobox.preview-link(href='/images/portfolio/portfolio-2.jpg', data-gall='portfolioGallery', title='Web 3')
+							h4 Chintz 3
+							p Chintz
+							a.venobox.preview-link(href='/images/portfolio/portfolio-7.jpg', data-gall='portfolioGallery', title='Web 3')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
@@ -200,8 +195,8 @@ block content
 						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-3.jpg', alt='')
 						.portfolio-info
-							h4 App 2
-							p App
+							h4 Satin 2
+							p Satin
 							a.venobox.preview-link(href='/images/portfolio/portfolio-3.jpg', data-gall='portfolioGallery', title='App 2')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
@@ -210,49 +205,49 @@ block content
 						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-4.jpg', alt='')
 						.portfolio-info
-							h4 Card 2
-							p Card
+							h4 Poplin 2
+							p Poplin
 							a.venobox.preview-link(href='/images/portfolio/portfolio-4.jpg', data-gall='portfolioGallery', title='Card 2')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
 					.col-lg-4.col-md-6.portfolio-item.filter-web
 						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-5.jpg', alt='')
+							img.img-fluid(src='/images/portfolio/portfolio-4.jpg', alt='')
 						.portfolio-info
-							h4 Web 2
-							p Web
-							a.venobox.preview-link(href='/images/portfolio/portfolio-5.jpg', data-gall='portfolioGallery', title='Web 2')
+							h4 Chintz 2
+							p Chintz
+							a.venobox.preview-link(href='/images/portfolio/portfolio-4.jpg', data-gall='portfolioGallery', title='Web 2')
 								i.bx.bx-plus
 							a.details-link(href='portfolio-details.html', title='More Details')
 								i.bx.bx-link
 					.col-lg-4.col-md-6.portfolio-item.filter-app
 						.portfolio-img
+							img.img-fluid(src='/images/portfolio/portfolio-2.jpg', alt='')
+						.portfolio-info
+							h4 Satin 3
+							p Satin
+							a.venobox.preview-link(href='/images/portfolio/portfolio-2.jpg', data-gall='portfolioGallery', title='App 3')
+								i.bx.bx-plus
+							a.details-link(href='/portfolio-details', title='More Details')
+								i.bx.bx-link
+					.col-lg-4.col-md-6.portfolio-item.filter-card
+						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-6.jpg', alt='')
 						.portfolio-info
-							h4 App 3
-							p App
-							a.venobox.preview-link(href='/images/portfolio/portfolio-6.jpg', data-gall='portfolioGallery', title='App 3')
+							h4 Poplin 1
+							p Poplin
+							a.venobox.preview-link(href='/images/portfolio/portfolio-6.jpg', data-gall='portfolioGallery', title='Card 1')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
 					.col-lg-4.col-md-6.portfolio-item.filter-card
 						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-7.jpg', alt='')
+							img.img-fluid(src='/images/portfolio/portfolio-5.jpg', alt='')
 						.portfolio-info
-							h4 Card 1
-							p Card
-							a.venobox.preview-link(href='/images/portfolio/portfolio-7.jpg', data-gall='portfolioGallery', title='Card 1')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-card
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-8.jpg', alt='')
-						.portfolio-info
-							h4 Card 3
-							p Card
-							a.venobox.preview-link(href='/images/portfolio/portfolio-8.jpg', data-gall='portfolioGallery', title='Card 3')
+							h4 Poplin 3
+							p Poplin
+							a.venobox.preview-link(href='/images/portfolio/portfolio-5.jpg', data-gall='portfolioGallery', title='Card 3')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
@@ -260,8 +255,8 @@ block content
 						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-9.jpg', alt='')
 						.portfolio-info
-							h4 Web 1
-							p Web
+							h4 Chintz 1
+							p Chintz
 							a.venobox.preview-link(href='/images/portfolio/portfolio-9.jpg', data-gall='portfolioGallery', title='Web 3')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
@@ -446,7 +441,7 @@ block content
 							.address
 								i.icofont-google-map
 								h4 Location:
-								p Samarkand city
+								p Tashkent city
 							.email
 								i.icofont-envelope
 								h4 Email:
