--- a/views/ru/index.pug
+++ b/views/ru/index.pug
@@ -14,11 +14,7 @@ block content
 					li
 						a(href='/ru/katalog') Каталог
 
-					li
-						a(href='#pricing') Pricing
 
-					li
-						a(href='#team') Team
 					li
 						a(href='#contact') Контакты
 					li
@@ -113,81 +109,81 @@ block content
 					.col-lg-4.col-md-6
 						.icon-box(data-aos='zoom-in-left')
 							.icon
-								i.las.la-fish(style='color: #ff689b;')
+								i.las.la-handshake(style='color: #ff689b;')
+							h4.title
+								a(href='')  Сотрудничество
+							p.description
+								| Мы предлагаем вам стать нашим официальным представителем в вашем городе и получить всевозможную поддержку от нас для развития собственного бизнеса.  За подробной информацией обращайтесь mazzo_uz@mail.ru
+					.col-lg-4.col-md-6.mt-5.mt-md-0
+						.icon-box(data-aos='zoom-in-left', data-aos-delay='100')
+							.icon
+								i.las.la-award(style='color: #e9bf06;')
+							h4.title
+								a(href='') Высшее качество
+							p.description
+								| Благодаря безупречному материалу из которых шьются наши комплекты,  мы даем вам 15-20 лет гарантии на каждый комплект
+					.col-lg-4.col-md-6.mt-5.mt-lg-0
+						.icon-box(data-aos='zoom-in-left', data-aos-delay='200')
+							.icon
+								i.las.la-layer-group(style='color: #3fcdc7;')
 							h4.title
 								a(href='') Новые коллекции
 							p.description
 								| Мы стараемся развиваться в ногу со временем и поэтому  наша команда работает над новыми дизайнами каждый день
-					.col-lg-4.col-md-6.mt-5.mt-md-0
-						.icon-box(data-aos='zoom-in-left', data-aos-delay='100')
+					.col-lg-4.col-md-6.mt-5
+						.icon-box(data-aos='zoom-in-left', data-aos-delay='300')
 							.icon
-								i.las.la-book(style='color: #e9bf06;')
+								i.las.la-user-clock(style='color:#41cf2e;')
 							h4.title
 								a(href='') Быстрая обратная связь
 							p.description
 								| Наши сотрудники выкладываются во всю,  чтоб ни одному посетителю нашего сайта задавший вопрос не пришлось ждать очень долго
-					.col-lg-4.col-md-6.mt-5.mt-lg-0
-						.icon-box(data-aos='zoom-in-left', data-aos-delay='200')
+					.col-lg-4.col-md-6.mt-5
+						.icon-box(data-aos='zoom-in-left', data-aos-delay='400')
 							.icon
-								i.las.la-file-alt(style='color: #3fcdc7;')
+								i.las.la-street-view(style='color: #d6ff22;')
 							h4.title
 								a(href='') Индивидуальный подход к каждому клиенту
 							p.description
 								| Вы можете заказать новый комплект постельного белья сшитый исключительно для вас указав размеры, дизайн  и материал
 					.col-lg-4.col-md-6.mt-5
-						.icon-box(data-aos='zoom-in-left', data-aos-delay='300')
+						.icon-box(data-aos='zoom-in-left', data-aos-delay='500')
 							.icon
-								i.las.la-tachometer-alt(style='color:#41cf2e;')
+								i.las.la-globe(style='color: #4680ff;')
 							h4.title
 								a(href='') Доставка в любую точку земли
 							p.description
 								| Вы можете заказать комплект постельного белья из любой точки земли не выходя из дома
-					.col-lg-4.col-md-6.mt-5
-						.icon-box(data-aos='zoom-in-left', data-aos-delay='400')
-							.icon
-								i.las.la-globe-americas(style='color: #d6ff22;')
-							h4.title
-								a(href='') Что мы можем предложить?
-							p.description
-								| Мы предлагаем вам стать нашим официальным представителем в вашем городе и получить всевозможную поддержку от нас для развития собственного бизнеса.  За подробной информацией обращайтесь mazzo_uz@mail.ru
-					.col-lg-4.col-md-6.mt-5
-						.icon-box(data-aos='zoom-in-left', data-aos-delay='500')
-							.icon
-								i.las.la-clock(style='color: #4680ff;')
-							h4.title
-								a(href='') Высшее качество
-							p.description
-								| Благодаря безупречному материалу из которых шьются наши комплекты,  мы даем вам 15-20 лет гарантии на каждый комплект
 					// End Services Section
 					// ======= Portfolio Section =======
 		section#portfolio.portfolio
 			.container
 				.section-title(data-aos='zoom-out')
-					h2 Portfolio
-					p What we've done
+					h2 Портфолио
+					p Что мы создали
 				ul#portfolio-flters.d-flex.justify-content-end(data-aos='fade-up')
 					li.filter-active(data-filter='*') Всё
-					li(data-filter='.filter-app') Сатин
+					li(data-filter='.filter-app') Cатин
 					li(data-filter='.filter-card') Поплин
-					li(data-filter='.filter-web') Ситец
+					li(data-filter='.filter-web') Cитец
 				.row.portfolio-container(data-aos='fade-up')
 					.col-lg-4.col-md-6.portfolio-item.filter-app
 						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-1.JPG', alt='')
 						.portfolio-info
-							h4 App 1
-							p App
+							h4 Cатин 1
+							p Cатин
 							a.venobox.preview-link(href='/images/portfolio/portfolio-1.jpg', data-gall='portfolioGallery', title='App 1')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
 					.col-lg-4.col-md-6.portfolio-item.filter-web
 						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-2.jpg', alt='')
+							img.img-fluid(src='/images/portfolio/portfolio-7.jpg', alt='')
 						.portfolio-info
-							h4 Web 3
-							p Web
-							a.venobox.preview-link(href='/images/portfolio/portfolio-2.jpg', data-gall='portfolioGallery', title='Web 3')
+							h4 Cитец 3
+							p Cитец
+							a.venobox.preview-link(href='/images/portfolio/portfolio-7.jpg', data-gall='portfolioGallery', title='Web 3')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
@@ -195,8 +191,8 @@ block content
 						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-3.jpg', alt='')
 						.portfolio-info
-							h4 App 2
-							p App
+							h4 Cатин 2
+							p Cатин
 							a.venobox.preview-link(href='/images/portfolio/portfolio-3.jpg', data-gall='portfolioGallery', title='App 2')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
@@ -205,49 +201,49 @@ block content
 						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-4.jpg', alt='')
 						.portfolio-info
-							h4 Card 2
-							p Card
+							h4 Поплин 2
+							p Поплин
 							a.venobox.preview-link(href='/images/portfolio/portfolio-4.jpg', data-gall='portfolioGallery', title='Card 2')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
 					.col-lg-4.col-md-6.portfolio-item.filter-web
 						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-5.jpg', alt='')
+							img.img-fluid(src='/images/portfolio/portfolio-4.jpg', alt='')
 						.portfolio-info
-							h4 Web 2
-							p Web
-							a.venobox.preview-link(href='/images/portfolio/portfolio-5.jpg', data-gall='portfolioGallery', title='Web 2')
+							h4 Cитец 2
+							p Cитец
+							a.venobox.preview-link(href='/images/portfolio/portfolio-8.jpg', data-gall='portfolioGallery', title='Web 2')
 								i.bx.bx-plus
 							a.details-link(href='portfolio-details.html', title='More Details')
 								i.bx.bx-link
 					.col-lg-4.col-md-6.portfolio-item.filter-app
 						.portfolio-img
+							img.img-fluid(src='/images/portfolio/portfolio-2.jpg', alt='')
+						.portfolio-info
+							h4 Cатин 3
+							p Cатин
+							a.venobox.preview-link(href='/images/portfolio/portfolio-2.jpg', data-gall='portfolioGallery', title='App 3')
+								i.bx.bx-plus
+							a.details-link(href='/portfolio-details', title='More Details')
+								i.bx.bx-link
+					.col-lg-4.col-md-6.portfolio-item.filter-card
+						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-6.jpg', alt='')
 						.portfolio-info
-							h4 App 3
-							p App
-							a.venobox.preview-link(href='/images/portfolio/portfolio-6.jpg', data-gall='portfolioGallery', title='App 3')
+							h4 Поплин 1
+							p Поплин
+							a.venobox.preview-link(href='/images/portfolio/portfolio-6.jpg', data-gall='portfolioGallery', title='Card 1')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
 					.col-lg-4.col-md-6.portfolio-item.filter-card
 						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-7.jpg', alt='')
+							img.img-fluid(src='/images/portfolio/portfolio-5.jpg', alt='')
 						.portfolio-info
-							h4 Card 1
-							p Card
-							a.venobox.preview-link(href='/images/portfolio/portfolio-7.jpg', data-gall='portfolioGallery', title='Card 1')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-card
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-8.jpg', alt='')
-						.portfolio-info
-							h4 Card 3
-							p Card
-							a.venobox.preview-link(href='/images/portfolio/portfolio-8.jpg', data-gall='portfolioGallery', title='Card 3')
+							h4 Поплин 3
+							p Поплин
+							a.venobox.preview-link(href='/images/portfolio/portfolio-5.jpg', data-gall='portfolioGallery', title='Card 3')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
 								i.bx.bx-link
@@ -255,8 +251,8 @@ block content
 						.portfolio-img
 							img.img-fluid(src='/images/portfolio/portfolio-9.jpg', alt='')
 						.portfolio-info
-							h4 Web 1
-							p Web
+							h4 Cитец 1
+							p Cитец
 							a.venobox.preview-link(href='/images/portfolio/portfolio-9.jpg', data-gall='portfolioGallery', title='Web 3')
 								i.bx.bx-plus
 							a.details-link(href='/portfolio-details', title='More Details')
@@ -441,7 +437,7 @@ block content
 							.address
 								i.icofont-google-map
 								h4 Расположение:
-								p Самарканд
+								p Ташкент
 							.email
 								i.icofont-envelope
 								h4 Эл. адрес:
@@ -454,10 +450,10 @@ block content
 						form.php-email-form(action='/', method='post', role='form')
 							.form-row
 								.col-md-6.form-group
-									input#name.form-control(type='text', name='name', placeholder='Your Name', data-rule='minlen:4', data-msg='Please enter at least 4 chars')
+									input#name.form-control(type='text', name='name', placeholder='Ваши имя', data-rule='minlen:4', data-msg='Please enter at least 4 chars')
 									.validate
 								.col-md-6.form-group
-									input#email.form-control(type='email', name='email', placeholder='Your Email', data-rule='email', data-msg='Please enter a valid email')
+									input#email.form-control(type='email', name='email', placeholder='Ваши почта', data-rule='email', data-msg='Please enter a valid email')
 									.validate
 							.form-group
 								input#subject.form-control(type='text', name='subject', placeholder='Subject', data-rule='minlen:4', data-msg='Please enter at least 8 chars of subject')
