--- a/views/ru/collection_id.pug
+++ b/views/ru/collection_id.pug
@@ -7,7 +7,7 @@ html(lang='en')
         meta(content='', name='descriptison')
         meta(content='', name='keywords')
         // Favicons
-        link(href='/images/favicon.png', rel='icon')
+        link(href='/images/mazzo.png', rel='icon')
         link(href='/images/apple-touch-icon.png', rel='apple-touch-icon')
         // Google Fonts
         link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i', rel='stylesheet')
