--- a/views/en/index.pug
+++ b/views/en/index.pug
@@ -17,7 +17,7 @@ block content
 					li
 						a(href='#contact') Contacts
 					li
-						a(href='/ru') ru
+						a(href='/ru') rus
 	section#hero.d-flex.flex-column.justify-content-end.align-items-center
 		#heroCarousel.container.carousel.carousel-fade(data-ride='carousel')
 			// Slide 1
@@ -477,16 +477,12 @@ block content
 			h3 Mazzo
 			//p |Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.
 			.social-links
-			a.twitter(href='#')
-				i.bx.bxl-twitter
-			a.facebook(href='#')
-				i.bx.bxl-facebook
-			a.instagram(href='#')
-				i.bx.bxl-instagram
-			a.google-plus(href='#')
-				i.bx.bxl-skype
-			a.linkedin(href='#')
-				i.bx.bxl-linkedin
+				a.telegram(href='https://t.me/Mazzo_lux_postel')
+					i.bx.bxl-telegram
+				a.facebook(href='https://www.facebook.com/Mazzo-112011266987526/')
+					i.bx.bxl-facebook
+				a.instagram(href='https://www.instagram.com/invites/contact/?i=wzqzm57fyo3k&utm_content=cpi8om2')
+					i.bx.bxl-instagram
 			.copyright
 			|©Copyright 
 			strong
