--- a/public/stylesheets/main_katalog.css
+++ b/public/stylesheets/main_katalog.css
@@ -4843,6 +4843,7 @@ Version:1.0
 ===============================*/
 .footer{
 	background:#222;
+	margin-bottom: 20px;
 }
 .footer .about {
 	padding-right: 50px;
