--- a/views/ru/collection_id.pug
+++ b/views/ru/collection_id.pug
@@ -3,23 +3,29 @@ html(lang='en')
     head
         meta(charset='utf-8')
         meta(content='width=device-width, initial-scale=1.0', name='viewport')
-        title Portfolio Details - Selecao Bootstrap Template
+        title Mazzo
         meta(content='', name='descriptison')
         meta(content='', name='keywords')
         // Favicons
-        link(href='/images/mazzo.png', rel='icon')
-        link(href='/images/apple-touch-icon.png', rel='apple-touch-icon')
+        link(href='/images/mazzo.png', rel='icon' type='image/png')
         // Google Fonts
         link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i', rel='stylesheet')
         // Vendor CSS Files
-        link(href='/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
+        link(href='/vendor/bootstrap/css/bootstrap.css', rel='stylesheet')
+
+        link(href='/vendor/icofont/icofont.min.css', rel='stylesheet')
         link(href='/vendor/boxicons/css/boxicons.min.css', rel='stylesheet')
+        link(href='/vendor/animate.css/animate.min.css', rel='stylesheet')
+        link(href='/vendor/remixicon/remixicon.css', rel='stylesheet')
+        link(href='/vendor/line-awesome/css/line-awesome.min.css', rel='stylesheet')
+        link(href='/vendor/venobox/venobox.css', rel='stylesheet')
+        link(href='/vendor/owl.carousel/assets/owl.carousel.min.css', rel='stylesheet')
+        link(href='/vendor/aos/aos.css', rel='stylesheet')
         // Template Main CSS File
         link(href='/stylesheets/style.css', rel='stylesheet')
-        link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css')
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')
-        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js')
-
+        link(href='/stylesheets/main.css', rel='stylesheet')
+        link(href='/stylesheets/util.css', rel='stylesheet')
+        link(href='/stylesheets/main_katalog.css', rel='stylesheet')
     body
         // ======= Header =======
         header#header.fixed-top.d-flex.align-items-center
@@ -35,12 +41,6 @@ html(lang='en')
                             a(href='#about') О нас
                         li
                             a(href='/ru/katalog') Каталог
-
-                        li
-                            a(href='#pricing') Pricing
-
-                        li
-                            a(href='#team') Team
                         li
                             a(href='#contact') Контакты
                         li
@@ -79,22 +79,22 @@ html(lang='en')
                             span.glyphicon.glyphicon-chevron-right
                             span.sr-only Next
 
-                        .portfolio-info
-                            h3= collection.name_ru
-                            ul
-                                li
-                                    strong Каталог
-                                    | : #{product.name_ru}
-                                li
-                                    strong Client
-                                    | : 100+
-                                li
-                                    strong  date
-                                    | : 01 March, 2020
-                                li
-                                    strong Nimadir qo`shamizasdasdasdasdasd
-                                    | : 
-                                    a(href='#') :)
+                        //.portfolio-info
+                        //    h3= collection.name_ru
+                        //    ul
+                        //        li
+                        //            strong Каталог
+                        //            | : #{product.name_ru}
+                        //        li
+                        //            strong Client
+                        //            | : 100+
+                        //        li
+                        //            strong  date
+                        //            | : 01 March, 2020
+                        //        li
+                        //            strong Nimadir qo`shamizasdasdasdasdasd
+                        //            | :
+                        //            a(href='#') :)
                     .portfolio-description
                         h2 This is an example of portfolio detail
                         p
@@ -102,32 +102,19 @@ html(lang='en')
         
         footer#footer
             .container
-            h3 Mazzo
-            p
-                | Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.
-            .social-links
-                a.twitter(href='#')
-                    i.bx.bxl-twitter
-                a.facebook(href='#')
-                    i.bx.bxl-facebook
-                a.instagram(href='#')
-                    i.bx.bxl-instagram
-                a.google-plus(href='#')
-                    i.bx.bxl-skype
-                a.linkedin(href='#')
-                    i.bx.bxl-linkedin
-            .copyright
-                | © Copyright 
+                h3 Mazzo
+                //p |Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.
+                .social-links
+                    a.telegram(href='https://t.me/Mazzo_lux_postel')
+                        i.bx.bxl-telegram
+                    a.facebook(href='https://www.facebook.com/Mazzo-112011266987526/')
+                        i.bx.bxl-facebook
+                    a.instagram(href='https://www.instagram.com/invites/contact/?i=wzqzm57fyo3k&utm_content=cpi8om2')
+                        i.bx.bxl-instagram
+                .copyright
+                | ©Авторское право
                 strong
-                span Selecao
-                | . All Rights Reserved
-            .credits
-                // All the links in the footer should remain intact.
-                // You can delete the links only if you purchased the pro version.
-                // Licensing information: https://bootstrapmade.com/license/
-                // Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/selecao-bootstrap-template/
-                | Designed by 
-                a(href='https://bootstrapmade.com/') BootstrapMade
-        // End Footer
+                    span  Mazzo.
+                | Все права защищены
         a.back-to-top(href='#')
             i.ri-arrow-up-line
