--- a/views/ru/katalog.pug
+++ b/views/ru/katalog.pug
@@ -11,17 +11,13 @@ block content
                     li.active
                         a(href='/ru') Главное
                     li
-                        a(href='#about') О нас
+                        a(href='/ru#about') О нас
                     li
                         a(href='/ru/katalog') Каталог
 
-                    li
-                        a(href='#pricing') Pricing
 
                     li
-                        a(href='#team') Team
-                    li
-                        a(href='#contact') Контакты
+                        a(href='/ru#contact') Контакты
                     li
                         a(href='/en') ен
     main#main
@@ -72,32 +68,19 @@ block content
                                                                         span #{collection.price} сум
     footer#footer
         .container
-        h3 Маззо
-        p
-            | Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.
-        .social-links
-            a.twitter(href='#')
-                i.bx.bxl-twitter
-            a.facebook(href='#')
-                i.bx.bxl-facebook
-            a.instagram(href='#')
-                i.bx.bxl-instagram
-            a.google-plus(href='#')
-                i.bx.bxl-skype
-            a.linkedin(href='#')
-                i.bx.bxl-linkedin
-        .copyright
-            | © Copyright
+            h3 Mazzo
+            //p |Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.
+            .social-links
+                a.telegram(href='https://t.me/Mazzo_lux_postel')
+                    i.bx.bxl-telegram
+                a.facebook(href='https://www.facebook.com/Mazzo-112011266987526/')
+                    i.bx.bxl-facebook
+                a.instagram(href='https://www.instagram.com/invites/contact/?i=wzqzm57fyo3k&utm_content=cpi8om2')
+                    i.bx.bxl-instagram
+            .copyright
+            | ©Авторское право
             strong
-            span Selecao
-            | . All Rights Reserved
-        .credits
-            // All the links in the footer should remain intact.
-            // You can delete the links only if you purchased the pro version.
-            // Licensing information: https://bootstrapmade.com/license/
-            // Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/selecao-bootstrap-template/
-            | Designed by
-
-    // End Footer
+                span  Mazzo.
+            | Все права защищены
     a.back-to-top(href='#')
         i.ri-arrow-up-line
